--- a/TODO
+++ b/TODO
@@ -3,5 +3,8 @@
 * think about increasing
   * encapsulation
   * decoupling
+* think about
+  * using symbols instead of boolen (:alive instead of true)
+  * performance-impact? Symbol comparison is O(1)
 * System
   * get ruby-opengl running! Mess with ruby 1.8 & 1.9?
