--- a/TODO
+++ b/TODO
@@ -6,5 +6,8 @@
 * think about
   * using symbols instead of boolen (:alive instead of true)
   * performance-impact? Symbol comparison is O(1)
+    * true/false   : 65 ticks/sec @120x50
+    * :alive/:dead : 50 ticks/sec @120x50 
 * System
   * get ruby-opengl running! Mess with ruby 1.8 & 1.9?
+* fix "benchmark" showing stats every run, not only if the benchmark was involved
